@startuml modele-relationnel
title EduSphere : modèle relationnel (schéma PostgreSQL)
' Généré à partir du schéma réel de la base.
hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 12
skinparam ArrowColor #0B1E3D
skinparam roundcorner 8
skinparam entityBackgroundColor #F7F9FC
skinparam entityBorderColor #0B1E3D
skinparam packageBorderColor #9AA3B5

package "Établissements et comptes" {
  entity "etablissements" as etablissements {
    * id : INTEGER <<PK>>
    --
    * nom : VARCHAR(255)
    sigle : VARCHAR(255)
    devise : VARCHAR(255)
    * ville : VARCHAR(255)
    * pays : VARCHAR(255)
    boitePostale : VARCHAR(255)
    telephone : VARCHAR(255)
    email : VARCHAR(255)
    * statut : ENUM
    logo : TEXT
  }
  entity "utilisateurs" as utilisateurs {
    * id : INTEGER <<PK>>
    --
    * nom : VARCHAR(255)
    * prenom : VARCHAR(255)
    * email : VARCHAR(255) <<UNIQUE>>
    * motDePasse : VARCHAR(255)
    * role : ENUM
    service : VARCHAR(255)
    fonction : VARCHAR(255)
    * statut : ENUM
    codeDoubleFacteur : VARCHAR(255)
    codeDoubleFacteurExpire : TIMESTAMPTZ
    etablissementId : INTEGER <<FK>>
    tokenReinitialisation : VARCHAR(255)
    tokenReinitialisationExpire : TIMESTAMPTZ
    nouveautesVuesLe : TIMESTAMPTZ
  }
}
package "Structure pédagogique" {
  entity "classes" as classes {
    * id : INTEGER <<PK>>
    --
    * nom : VARCHAR(255)
    * niveau : VARCHAR(255)
    etablissementId : INTEGER <<FK>>
  }
  entity "semestres" as semestres {
    * id : INTEGER <<PK>>
    --
    * libelle : VARCHAR(255)
    * anneeScolaire : VARCHAR(255)
    etablissementId : INTEGER <<FK>>
    * cycle : ENUM
    * numero : INTEGER
  }
  entity "unites_enseignement" as unites_enseignement {
    * id : INTEGER <<PK>>
    --
    * code : VARCHAR(255) <<UNIQUE>>
    * intitule : VARCHAR(255)
    * credits : INTEGER
    * coefficient : DOUBLE PRECISION
    semestreId : INTEGER <<FK>>
  }
  entity "matieres" as matieres {
    * id : INTEGER <<PK>>
    --
    * code : VARCHAR(255)
    * intitule : VARCHAR(255)
    * coefficient : DOUBLE PRECISION
    uniteEnseignementId : INTEGER <<FK>>
  }
  entity "eleves" as eleves {
    * id : INTEGER <<PK>>
    --
    * nom : VARCHAR(255)
    * prenom : VARCHAR(255)
    dateNaissance : DATE
    etablissementId : INTEGER <<FK>>
    classeId : INTEGER <<FK>>
    compteEtudiantId : INTEGER <<FK>>
    parentId : INTEGER <<FK>>
    matricule : VARCHAR(30) <<UNIQUE>>
  }
  entity "professeurs" as professeurs {
    * id : INTEGER <<PK>>
    --
    * nom : VARCHAR(255)
    * prenom : VARCHAR(255)
    * email : VARCHAR(255) <<UNIQUE>>
    matiere : VARCHAR(255)
    etablissementId : INTEGER <<FK>>
  }
}
package "Évaluation et suivi" {
  entity "notes" as notes {
    * id : INTEGER <<PK>>
    --
    moyenneCC : DOUBLE PRECISION
    moyenneExamen : DOUBLE PRECISION
    * session : ENUM
    eleveId : INTEGER <<FK>>
    matiereId : INTEGER <<FK>>
    compteEphemereId : INTEGER <<FK>>
    saisiParAcademieId : INTEGER <<FK>>
  }
  entity "bulletins" as bulletins {
    * id : INTEGER <<PK>>
    --
    * moyenneGenerale : DOUBLE PRECISION
    * creditsValides : INTEGER
    * dateGeneration : TIMESTAMPTZ
    * statut : ENUM
    fichierPDF : VARCHAR(255)
    eleveId : INTEGER <<FK>>
    semestreId : INTEGER <<FK>>
  }
  entity "incidents_comportement" as incidents_comportement {
    * id : INTEGER <<PK>>
    --
    * date : DATE
    * description : VARCHAR(255)
    * gravite : ENUM
    eleveId : INTEGER <<FK>>
    saisiParAcademieId : INTEGER <<FK>>
    parentInformeLe : TIMESTAMPTZ
  }
  entity "predictions_ia" as predictions_ia {
    * id : INTEGER <<PK>>
    --
    * scoreRisque : DOUBLE PRECISION
    * niveauRisque : ENUM
    * dateCalcul : TIMESTAMPTZ
    facteursCles : TEXT
    * alerteGeneree : BOOLEAN
    eleveId : INTEGER <<FK>>
  }
}
package "Vie scolaire et communication" {
  entity "absences" as absences {
    * id : INTEGER <<PK>>
    --
    * date : DATE
    * justifie : BOOLEAN
    motif : VARCHAR(255)
    cours : VARCHAR(255)
    eleveId : INTEGER <<FK>>
    saisiParAcademieId : INTEGER <<FK>>
    compteEphemereId : INTEGER <<FK>>
    * type : ENUM
  }
  entity "emplois_du_temps" as emplois_du_temps {
    * id : INTEGER <<PK>>
    --
    * jour : VARCHAR(255)
    * heureDebut : VARCHAR(255)
    * heureFin : VARCHAR(255)
    salle : VARCHAR(255)
    classeId : INTEGER <<FK>>
    semestreId : INTEGER <<FK>>
    matiere : VARCHAR(255)
  }
  entity "publications_emplois_du_temps" as publications_emplois_du_temps {
    * id : INTEGER <<PK>>
    --
    * creneaux : JSON
    * publieLe : TIMESTAMPTZ
    * nbDestinataires : INTEGER
    * version : INTEGER
    classeId : INTEGER <<FK>>
    semestreId : INTEGER <<FK>>
    publieParId : INTEGER <<FK>>
  }
  entity "cahiers_de_textes" as cahiers_de_textes {
    * id : INTEGER <<PK>>
    --
    * date : DATE
    * contenuSeance : TEXT
    classeId : INTEGER <<FK>>
    academieId : INTEGER <<FK>>
    compteEphemereId : INTEGER <<FK>>
  }
  entity "messages_annonces" as messages_annonces {
    * id : INTEGER <<PK>>
    --
    * titre : VARCHAR(255)
    * contenu : TEXT
    * dateEnvoi : TIMESTAMPTZ
    * type : ENUM
    auteurId : INTEGER <<FK>>
    classeId : INTEGER <<FK>>
  }
  entity "notifications" as notifications {
    * id : INTEGER <<PK>>
    --
    * contenu : VARCHAR(255)
    * dateEnvoi : TIMESTAMPTZ
    * lu : BOOLEAN
    utilisateurId : INTEGER <<FK>>
  }
}
package "Accès temporaires des professeurs" {
  entity "comptes_ephemeres" as comptes_ephemeres {
    * id : INTEGER <<PK>>
    --
    * jeton : VARCHAR(255) <<UNIQUE>>
    * tache : ENUM
    * categorie : ENUM
    evaluationLibelle : VARCHAR(255)
    * dateCreation : TIMESTAMPTZ
    * dateExpiration : TIMESTAMPTZ
    * statut : ENUM
    creeParAcademieId : INTEGER <<FK>>
    professeurId : INTEGER <<FK>>
    classeId : INTEGER <<FK>>
    matiereId : INTEGER <<FK>>
    saisieEnvoyeeLe : TIMESTAMPTZ
  }
  entity "comptes_rendus_saisie" as comptes_rendus_saisie {
    * id : INTEGER <<PK>>
    --
    * tache : ENUM
    * date : DATE
    professeurNom : VARCHAR(255)
    classeNom : VARCHAR(255)
    matiereNom : VARCHAR(255)
    categorie : VARCHAR(10)
    evaluationLibelle : VARCHAR(255)
    * resume : JSON
    * lignes : JSON
    * envoyeLe : TIMESTAMPTZ
    compteEphemereId : INTEGER <<FK>>
    classeId : INTEGER <<FK>>
    professeurId : INTEGER <<FK>>
    matiereId : INTEGER <<FK>>
    etablissementId : INTEGER <<FK>>
  }
}
package "Finance et paie" {
  entity "frais_scolarite" as frais_scolarite {
    * id : INTEGER <<PK>>
    --
    * libelle : VARCHAR(255)
    * montant : DOUBLE PRECISION
    * montantRegle : DOUBLE PRECISION
    * dateEcheance : DATE
    * statut : ENUM
    eleveId : INTEGER <<FK>>
    semestreId : INTEGER <<FK>>
  }
  entity "paiements" as paiements {
    * id : INTEGER <<PK>>
    --
    * montant : DOUBLE PRECISION
    * datePaiement : TIMESTAMPTZ
    * modePaiement : ENUM
    * statut : ENUM
    fraisId : INTEGER <<FK>>
    enregistreParFinanceId : INTEGER <<FK>>
  }
  entity "recus" as recus {
    * id : INTEGER <<PK>>
    --
    * numero : VARCHAR(255) <<UNIQUE>>
    * dateEmission : TIMESTAMPTZ
    fichierPDF : VARCHAR(255)
    paiementId : INTEGER <<FK>>
  }
  entity "personnel" as personnel {
    * id : INTEGER <<PK>>
    --
    * nom : VARCHAR(255)
    * prenom : VARCHAR(255)
    email : VARCHAR(255)
    * poste : VARCHAR(255)
    salaireBase : DOUBLE PRECISION
    dateEmbauche : DATE
    etablissementId : INTEGER <<FK>>
    professeurId : INTEGER <<FK>>
  }
  entity "salaires" as salaires {
    * id : INTEGER <<PK>>
    --
    * montant : DOUBLE PRECISION
    * periode : VARCHAR(255)
    * statut : ENUM
    dateVersement : DATE
    fichierPDF : VARCHAR(255)
    gereParFinanceId : INTEGER <<FK>>
    personnelId : INTEGER <<FK>>
  }
}
package "Documents et journaux" {
  entity "documents_pdf" as documents_pdf {
    * id : INTEGER <<PK>>
    --
    * nomFichier : VARCHAR(255) <<UNIQUE>>
    * typeDocument : VARCHAR(30)
    * contenu : BYTEA
    * taille : INTEGER
  }
  entity "journal_emails" as journal_emails {
    * id : INTEGER <<PK>>
    --
    * destinataire : VARCHAR(255)
    * sujet : VARCHAR(300)
    * service : VARCHAR(30)
    * statut : ENUM
    * erreurs : JSON
  }
}
package "Pilotage de la plateforme (superadmin)" {
  entity "fonctionnalites_personnalisees" as fonctionnalites_personnalisees {
    * id : INTEGER <<PK>>
    --
    * cle : VARCHAR(255) <<UNIQUE>>
    * type : ENUM
    * nom : VARCHAR(80)
    * description : VARCHAR(300)
    * icone : VARCHAR(40)
    * espaces : JSON
    contenu : TEXT
    url : VARCHAR(500)
    libelleBouton : VARCHAR(60)
    auteurId : INTEGER
  }
  entity "activations_fonctionnalites" as activations_fonctionnalites {
    * id : INTEGER <<PK>>
    --
    * etablissementId : INTEGER
    * cle : VARCHAR(255)
  }
  entity "parametres_plateforme" as parametres_plateforme {
    * cle : VARCHAR(255) <<PK>>
    --
    valeur : JSON
  }
  entity "mises_a_jour" as mises_a_jour {
    * id : INTEGER <<PK>>
    --
    * version : VARCHAR(20)
    * titre : VARCHAR(140)
    * contenu : TEXT
    * type : ENUM
    * statut : ENUM
    publieeLe : TIMESTAMPTZ
    * espaces : JSON
    auteurId : INTEGER
  }
  entity "journal_administration" as journal_administration {
    * id : INTEGER <<PK>>
    --
    auteurId : INTEGER
    * auteurNom : VARCHAR(255)
    * categorie : VARCHAR(30)
    * libelle : VARCHAR(400)
  }
}

absences }o--o| comptes_ephemeres : compteEphemereId
absences }o--o| eleves : eleveId
absences }o--o| utilisateurs : saisiParAcademieId
bulletins }o--o| eleves : eleveId
bulletins }o--o| semestres : semestreId
cahiers_de_textes }o--o| utilisateurs : academieId
cahiers_de_textes }o--o| classes : classeId
cahiers_de_textes }o--o| comptes_ephemeres : compteEphemereId
classes }o--o| etablissements : etablissementId
comptes_ephemeres }o--o| classes : classeId
comptes_ephemeres }o--o| utilisateurs : creeParAcademieId
comptes_ephemeres }o--o| matieres : matiereId
comptes_ephemeres }o--o| professeurs : professeurId
comptes_rendus_saisie }o--o| classes : classeId
comptes_rendus_saisie }o--o| comptes_ephemeres : compteEphemereId
comptes_rendus_saisie }o--o| etablissements : etablissementId
comptes_rendus_saisie }o--o| matieres : matiereId
comptes_rendus_saisie }o--o| professeurs : professeurId
eleves }o--o| classes : classeId
eleves }o--o| utilisateurs : compteEtudiantId
eleves }o--o| etablissements : etablissementId
eleves }o--o| utilisateurs : parentId
emplois_du_temps }o--o| classes : classeId
emplois_du_temps }o--o| semestres : semestreId
frais_scolarite }o--o| eleves : eleveId
frais_scolarite }o--o| semestres : semestreId
incidents_comportement }o--o| eleves : eleveId
incidents_comportement }o--o| utilisateurs : saisiParAcademieId
matieres }o--o| unites_enseignement : uniteEnseignementId
messages_annonces }o--o| utilisateurs : auteurId
messages_annonces }o--o| classes : classeId
notes }o--o| comptes_ephemeres : compteEphemereId
notes }o--o| eleves : eleveId
notes }o--o| matieres : matiereId
notes }o--o| utilisateurs : saisiParAcademieId
notifications }o--o| utilisateurs : utilisateurId
paiements }o--o| utilisateurs : enregistreParFinanceId
paiements }o--o| frais_scolarite : fraisId
personnel }o--o| etablissements : etablissementId
personnel }o--o| professeurs : professeurId
predictions_ia }o--o| eleves : eleveId
professeurs }o--o| etablissements : etablissementId
publications_emplois_du_temps }o--o| classes : classeId
publications_emplois_du_temps }o--o| utilisateurs : publieParId
publications_emplois_du_temps }o--o| semestres : semestreId
recus }o--o| paiements : paiementId
salaires }o--o| utilisateurs : gereParFinanceId
salaires }o--o| personnel : personnelId
semestres }o--o| etablissements : etablissementId
unites_enseignement }o--o| semestres : semestreId
utilisateurs }o--o| etablissements : etablissementId
@enduml
